# meshcore-bot

./: .dockerignore  .gitignore  404.html  BUGS.md  CHANGELOG.md  COMMANDS.md  DOCKER.md  Dockerfile  Makefile  README.md  TESTING.md  TESTING_GUIDE.md  TODO.md  backup_database.py  config.ini.example  config.ini.minimal-example  config.ini.quickstart  coverage.json  docker-compose.standalone.yml  docker-compose.yml  docker-setup.sh  flake.nix  generate_website.py  index.html  install-service.sh  install.sh  meshcore_bot.py  migrate_webviewer_db.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  restart_viewer.sh  sitemap.xml  uninstall-service.sh  uninstall.sh
.github/workflows/: docker-build.yml  docs.yml  test.yml
DOCKER/: index.html
FEEDS/: index.html
SERVICE-INSTALLATION/: index.html
checkin-api/: index.html
command-reference/: index.html
command-reference-website/: index.html
config-validation/: index.html
configuration/: index.html
data/: .gitkeep
data-retention/: index.html
discord-bridge/: index.html
docker/: entrypoint.sh  index.html
docs/: COMMANDS.md  DISCORD_BRIDGE.md  DOCKER.md  FEEDS.md  MAP_UPLOADER.md  PACKET_CAPTURE.md  PATH_COMMAND_CONFIG.md  REPEATER_COMMANDS.md  WEATHER_SERVICE.md  _config.yml  command-reference.md  config-validation.md  configuration.md  data-retention.md  discord-bridge.md  earthquake-service.md  faq.md  getting-started.md  index.md  packet-capture.md  path-command-config.md  pymc-core-backend.md  radio-reliability.md  service-plugins.md  topology-engine-contracts.md  weather-service.md  web-viewer.md
docs/integration/: kg7qin-pr-integration-log.md
earthquake-service/: index.html
faq/: index.html
getting-started/: index.html
installation/: index.html
local-plugins/: index.html
map-uploader/: index.html
modules/: admin_server.py  bridge_outbound.py  channel_manager.py  command_manager.py  config_validation.py  core.py  db_manager.py  db_migrations.py  default_config.py  feed_filter_eval.py  feed_manager.py  graph_trace_helper.py  ini_writer.py  kiss_modem.py  maintenance.py  mesh_graph.py  meshtnc_serial.py  message_handler.py  models.py  plugin_loader.py  profanity_filter.py  pymc_connection.py  pymc_identity.py  rate_limiter.py  repeater_manager.py  response_template.py  scheduled_message_cron.py  scheduler.py  security_utils.py  service_plugin_loader.py  settings_schema.py  settings_store.py  solar_conditions.py  topology_engine.py  trace_runner.py  transmission_tracker.py  url_shortener.py  utils.py  version_info.py  watchduty_poll.py
modules/clients/: espn_client.py  mqtt_weather.py  noaa_aurora_client.py  sports_mappings.py  thesportsdb_client.py  wxsim_parser.py
modules/commands/: advert_command.py  airplanes_command.py  alert_command.py  announcements_command.py  aqi_command.py  aurora_command.py  base_command.py  catfact_command.py  channelpause_command.py  channels_command.py  cmd_command.py  dadjoke_command.py  dice_command.py  evac_command.py  feed_command.py  fire_command.py  fortune_command.py  greeter_command.py  hacker_command.py  hello_command.py  help_command.py  hfcond_command.py  ia_command.py  joke_command.py  llm_command.py  magic8.py  magic8_command.py  moon_command.py  multitest_command.py  path_command.py  ping_command.py  plugins_command.py  prefix_command.py  rain_command.py  reload_command.py  repeater_command.py  roll_command.py  satpass_command.py  schedule_command.py  solar_command.py  (+10 more)
modules/service_plugins/: base_service.py  darc_mowas_service.py  discord_bridge_service.py  earthquake_service.py  map_uploader_service.py  mqtt_weather_service.py  packet_capture_service.py  packet_capture_utils.py  repeater_prefix_collision_service.py  telegram_bridge_service.py  weather_service.py  webhook_service.py
modules/web_viewer/: app.py  config_panels.py  integration.py
nix/: nixos-module.nix  nixos-test.nix  packages.nix
packet-capture/: index.html
path-command-config/: index.html
repeater-commands/: index.html
scripts/: build-deb.sh  check-package-data.sh  checkin_receiver.py  config_tui.py  context_checkpoint.sh  post_tool_counter.sh  reload_config.sh  update_todos.py
search/: search_index.json
service-installation/: index.html
service-plugins/: index.html
shared/: db_manager.py  geocoding.py  text_utils.py
shared/parsers/: packet_parser.py  path_parser.py
shared/radio_backend/: __init__.py  base.py  contacts.py  events.py  factory.py  meshcore_py_backend.py  protocol.py  pymc_core_backend.py  results.py
telegram-bridge/: index.html
tests/: conftest.py  helpers.py  test_announcements_command.py  test_aurora_command.py  test_base_command.py  test_bot_backend_integration.py  test_bridge_outbound.py  test_channels_command.py  test_command_manager.py  test_command_prefix.py  test_config_merge.py  test_config_validation.py  test_contacts_template_xss.py  test_core.py  test_dadjoke_command.py  test_db_manager.py  test_db_migrations.py  test_discord_bridge_multi_webhooks.py  test_enums.py  test_feed_filter_eval.py  test_feed_manager.py  test_feed_manager_extended.py  test_feed_manager_formatting.py  test_fortune_command.py  test_graph_trace_helper.py  test_hacker_command.py  test_help_command.py  test_i18n.py  test_joke_command.py  test_maintenance.py  test_meshcore_bot_cli.py  test_message_handler.py  test_message_handler_contact_path.py  test_models.py  test_moon_command.py  test_mqtt_live.py  test_multitest_command.py  test_plugin_loader.py  test_plugins_command.py  test_radio_backend.py  (+19 more)
tests/commands/: test_base_command.py  test_cmd_command.py  test_hello_command.py  test_help_command.py  test_ia_command.py  test_llm_command.py  test_magic8_command.py  test_roll_command.py
tests/fixtures/: mqtt_packets.json
tests/integration/: test_flood_scope_reply.py
translations/: de.json  en-GB.json  en.json  es.json  fr-CA.json  fr.json  nl.json  pl.json  pt-BR.json  pt.json
upgrade/: index.html
weather-service/: index.html
web-viewer/: index.html
web_viewer/: _launcher.py  app.py  integration.py
website/: index.html
(+44 files in other folders)
